# Vox

./: .gitignore  README.md  ai.py  cli.py  install.sh  pyproject.toml  requirements.txt  transcript.py  tui.py
